# mp2-lab6-ANTLR

./: CMakeLists.txt  README.md  README1.5.txt  README2.txt  examples.txt  generated.bat
antlr4-cpp-runtime-4.13.2-source/runtime/src/atn/: ProfilingATNSimulator.cpp
grammar/: mygr.g4
src/: main.cpp
